TEST_PROGRAMS/INVALID/justin_domignue/invalid-4.min
# No end if
var x: int;
if x then
  x = x + 1;
# endif

